# opendeck

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
.kiro/agents/: tdd-prompt.md  tdd.json
.kiro/steering/: project.md
src/: analog.rs  bpm.rs  button.rs  config.rs  encoder.rs  global.rs  handler.rs  lib.rs  parser.rs  renderer.rs  wiki_examples_test.rs
src/analog/: backup.rs  handler.rs  mod.rs  parser.rs  renderer.rs
src/button/: backup.rs  handler.rs  mod.rs  parser.rs  renderer.rs
src/config/: backup.rs  mod.rs
src/encoder/: backup.rs  handler.rs  mod.rs  parser.rs  renderer.rs
src/global/: backup.rs  handler.rs  mod.rs  parser.rs  renderer.rs
src/led/: backup.rs  handler.rs  mod.rs  parser.rs  renderer.rs
