[package]
name = "opendeck"
version = "0.1.0"
edition = "2021"
categories = ["no-std", "embedded"]

[dependencies]
midi2 = { version = "0.8.2", default-features = false, features = [
  "channel-voice1",
  "sysex7",
  "system-common",
] }
defmt = { version = "0.3.10", optional = true }
heapless = { version = "0.8.0", features = ["defmt-03"] }
int-enum = "1.2.0"

[features]
default = []
defmt = ["dep:defmt"]
