[package]
name = "opendeck"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["no-std", "embedded"]

[dependencies]
midi2 = { version = "0.11", default-features = false, features = [
  "channel-voice1",
  "sysex7",
  "system-common",
] }
defmt = { version = "1.1.0", optional = true }
heapless = { version = "0.9.3", features = ["defmt"] }
int-enum = "1.2.0"

[features]
default = []
defmt = ["dep:defmt"]
